--- a/src/Portfolio/Projects/Projectscss.css
+++ b/src/Portfolio/Projects/Projectscss.css
@@ -1,11 +1,13 @@
-.project{
 
-}
 .cards img{
     opacity: 1;
     transition: 0.4s ease-in-out;
     position: absolute;
     object-fit: cover;
+
+}
+.cards{
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px; 
 }
 .projectImg{
     overflow: hidden;
